@@ -1,4 +1,5 @@
 
+  - Added support for displaying ErrorExceptions raised by trigger_error()
   - (Issue 25) Wrong order in FireBug Console
   - Removed dependency on jQuery for Ajax requests
   - Added info message with link in console when server library is not latest available
